k3s/manifests/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-external
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitea-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.33.111.101
    ports:
      - port: 3000
