k3s/manifests/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - git.arpatek.dev
      secretName: arpatek-dev-tls
  rules:
    - host: git.arpatek.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-external
                port:
                  number: 3000
